fix(theming): dark contrast used incorrectly when only contrastStrongLightColors defined
- if `contrastStrongLightColors` is defined and `contrastLightColors` is not,
  `getContrastType()` was incorrectly picking `dark` instead of `strongLight`
- remove all of the duplicate `contrastLightColors` entries that had to remain before,
  due to this bug
- improve JSDoc
- checkbox's checkmark should always match the background color
  and never depend on the contrast of the accent color
- remove duplicate theme style generation for checkbox and button

--- a/src/components/button/button-theme.scss
+++ b/src/components/button/button-theme.scss
@@ -52,21 +52,6 @@
       }
     }
   }
-  &.md-fab {
-    background-color: '{{accent-color}}';
-    color: '{{accent-contrast}}';
-    &:not([disabled]) {
-      .md-icon {
-        color: '{{accent-contrast}}';
-      }
-      &:hover {
-        background-color: '{{accent-A700}}';
-      }
-      &.md-focused {
-        background-color: '{{accent-A700}}';
-      }
-    }
-  }
 
   &.md-raised {
     color: '{{background-900}}';
