--- a/src/components/button/demoBasicUsage/style.css
+++ b/src/components/button/demoBasicUsage/style.css
@@ -13,5 +13,4 @@ section .md-button {
   bottom: 5px;
   left: 7px;
   font-size: 14px;
-  color: rgba(0, 0, 0, 0.54);
 }
